# eval-delta

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: baseline.jsonl  candidate.jsonl
src/eval_delta/: __init__.py  __main__.py  analyzer.py  cli.py  errors.py  io.py  models.py  reporters.py  stats.py
tests/: test_analyzer.py  test_cli.py  test_io.py  test_reporters.py  test_stats.py
