[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-delta"
version = "0.1.0"
description = "Detect overall and slice-level regressions between paired LLM evaluation runs."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Mert Efe Kurt" }]
keywords = ["llm", "evaluation", "ai-engineering", "mlops", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.8",
]

[project.scripts]
eval-delta = "eval_delta.cli:entrypoint"

[project.urls]
Homepage = "https://github.com/mertefekurt/eval-delta"
Issues = "https://github.com/mertefekurt/eval-delta/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "SIM", "UP"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
